# Rubik-s-Kubik

./: CMakeLists.txt  Component.cpp  Component.h  Cube.cpp  Cube.h  README.md  Solver.cpp  Solver.h  main.cpp
